tests/fixtures/invalid/import_cycle_a.ko
module cycle_a {
    import import_cycle_b

    meta {
        purpose: "Test import cycle detection (A -> B -> A)"
        version: "0.1.0"
    }

    fn main() -> Int {
        return 0
    }
}
